#26 added yup for validations and fixed some layout bugs in the login page

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -18,15 +18,6 @@
     width: 30%;
 }
 
-#txtUsername {
-    margin-bottom: 10px;
-}
-
-.showPassword {
-    padding-top: 3px;
-    margin-bottom: 20px;
-}
-
 .loginButton {
     background-color: rgb(11, 82, 86);
     box-shadow: 0px 7px 7px 0px rgba(0, 0, 0, 0.55);
